--- a/trunk/application/views/simple2/master.twig
+++ b/trunk/application/views/simple2/master.twig
@@ -22,7 +22,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 <script type="text/javascript" src="{{APP_URL}}language/{{LANG}}/{{LANG}}.lang.js"></script>
 
 <!-- REQUIRED, CORE -->
-<script type="text/javascript" src="{{BOARD_URL}}js/jquery-1.6.4.min.js"></script>
+<script type="text/javascript" src="{{BOARD_URL}}js/jquery-1.7.1.min.js"></script>
 <script src="{{BOARD_URL}}js/jquery-ui-1.8.16.min.js" type="text/javascript"></script>
 
 <!-- PLUGINS USED ALL AROUND EBB -->
@@ -32,6 +32,9 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 <!-- notification plug-in. -->
 <script type="text/javascript" src="{{BOARD_URL}}js/jquery.jnotify.min.js"></script>
 <script type="text/javascript" src="{{BOARD_URL}}js/notify.js"></script>
+
+<!-- validation js -->
+<script type="text/javascript" src="{{BOARD_URL}}js/validate.min.js"></script>
 
 <!-- /JAVASCRIPT FILES -->
 </head>
@@ -109,33 +112,64 @@ FormResults("{{NOTIFY_TYPE}}", "{{NOTIFY_MSG}}"); //display message.
 	
 {%- else -%}
 	<!-- Login Modal -->
-	<script type="text/javascript" src="{{BOARD_URL}}js/validation.js"></script>
 	<div id="login" style="display:none" title="{{LANG_LOGIN}}">
- 	{{LOGINFORM|raw}}
+		<!-- validation box. -->
+		<div align="center" style="display:none;" id="div_ErrMsg_QLogin">
+			<div class="ui-widget">
+				<div class="ui-state-error ui-corner-all" style="padding: 0 .7em;text-align:left;">
+					<span style="float: right;font-weight:bold;"><a href="#close" onclick="$('#div_ErrMsg_QLogin').hide('blind', {}, 500);" class="ui-icon ui-icon-circle-close">&nbsp;</a></span>
+					<p id="validateQLogin"></p>
+				</div>
+			</div>
+		</div>
 
-	<p>
-	{{LANG_USERNAME}}&nbsp;[{{URL_TAG("login/register", LANG_REGISTER)|raw}}]<br />
-	<input type="text" name="username" class="text" size="30" id="user" tabindex="1" onblur="validateAlphaNumeric('user', 'usererr');" />
-	<div id="usererr"></div>
-	</p>
 
-	<p>
-	{{LANG_PASSWORD}}&nbsp;[{{URL_TAG("login/PasswordRecovery", LANG_FORGOT)|raw}}]<br />
-	<input type="password" name="password" class="text" size="30" id="pass" tabindex="2" onblur="validateAlphaNumeric('pass', 'passerr');" />
-	<div id="passerr"></div>
-	</p>
+		{{LOGINFORM|raw}}
 
-	<p>
-	<input type="checkbox" name="auto_login" value="1" />{{LANG_REMEMBERTXT}}
-	</p>
+		<p>
+		{{LANG_USERNAME}}&nbsp;[{{URL_TAG("login/register", LANG_REGISTER)|raw}}]<br />
+		<input type="text" name="username" class="text" size="30" id="username" tabindex="1" />
+		<div id="usererr"></div>
+		</p>
 
-	<p>
-	<input type="submit" value="{{LANG_LOGIN}}" class="submit" />
-	</p>
-	</form>
+		<p>
+		{{LANG_PASSWORD}}&nbsp;[{{URL_TAG("login/PasswordRecovery", LANG_FORGOT)|raw}}]<br />
+		<input type="password" name="password" class="text" size="30" id="password" tabindex="2" />
+		<div id="passerr"></div>
+		</p>
+
+		<p>
+		<input type="checkbox" name="auto_login" value="1" />{{LANG_REMEMBERTXT}}
+		</p>
+
+		<p>
+		<input type="submit" value="{{LANG_LOGIN}}" class="submit" />
+		</p>
+		</form>
+	    <script type="text/javascript">
+
+		new FormValidator('frmQLogin', [{
+			name: 'username',
+			display: '{{LANG_USERNAME}}',
+			rules: 'required'
+		}, {
+			name: 'password',
+			display: '{{LANG_PASSWORD}}',
+			rules: 'required'
+		}], function(errors, event) {
+
+			if (errors.length > 0) {
+				$('#validateQLogin').empty();
+				$('#validateQLogin').append(errors.join('<br />'));
+				$('#div_ErrMsg_QLogin').show();
+			} else {
+				event.returnValue = true; //allow form to process.
+			}
+
+		});
+		</script>
+
 	</div>
-
-
 {%- endif -%}
 
 <table border="0" class="table" cellspacing="1" cellpadding="3">
