--- a/trunk/application/views/simple2/viewtopic.twig
+++ b/trunk/application/views/simple2/viewtopic.twig
@@ -110,26 +110,27 @@
 		{% endif%}
 
 		{% if GAC_DELETETOPIC == TRUE %}
-			{{URL_TAG("boards/edittopic/"~TOPICID, IMG("application/views/simple2/images/edit.gif"))|raw}}
+			<a href="#" onclick="confirmDlg('{LANG-DELPROMPT}', '{BOARDDIR}/delete.php?action=deleteTopic&bid={BID}&tid={TID}');return false;"><img src="template/simple2/images/delete.gif" border="0" alt="" /></a>
 		{% endif%}
 
 	{% endif%}
 {% else %}
 
-<!-- START edit -->
-{{URL_TAG("boards/edittopic/"~TOPICID, IMG("application/views/simple2/images/edit.gif"))|raw}}
-<!-- END edit -->
+	{% if LOGGEDUSER == TOPIC_AUTHOR and GAC_EDITTOPIC == TRUE %}
+		{{URL_TAG("boards/edittopic/"~TOPICID, IMG("application/views/simple2/images/edit.gif"))|raw}}
+	{% endif %}
 
-<!-- START delete -->
-<a href="#" onclick="confirmDlg('{LANG-DELPROMPT}', '{BOARDDIR}/delete.php?action=deleteTopic&bid={BID}&tid={TID}');return false;"><img src="template/simple2/images/delete.gif" border="0" alt="" /></a>
-<!-- END delete -->
-
-<!-- START quote -->
-{{URL_TAG("boards/reply/"~TOPICID, IMG("application/views/simple2/images/quote.gif"))|raw}}
-<!--<a href="Post.php?mode=Reply&amp;bid={BID}&amp;tid={TID}&amp;type=1&amp;quser={AUTHOR}"><img src="template/simple2/images/quote.gif" border="0" alt="" /></a>-->
-<!-- END quote -->
+	{% if LOGGEDUSER == TOPIC_AUTHOR and GAC_DELETETOPIC == TRUE %}
+		<a href="#" onclick="confirmDlg('{LANG-DELPROMPT}', '{BOARDDIR}/delete.php?action=deleteTopic&bid={BID}&tid={TID}');return false;"><img src="template/simple2/images/delete.gif" border="0" alt="" /></a>
+	{% endif %}
 
 {% endif%}
+
+{% if LOGGEDUSER != "guest" %}
+{{URL_TAG("boards/reply/"~TOPICID, IMG("application/views/simple2/images/quote.gif"))|raw}}
+<!--<a href="Post.php?mode=Reply&amp;bid={BID}&amp;tid={TID}&amp;type=1&amp;quser={AUTHOR}"><img src="template/simple2/images/quote.gif" border="0" alt="" /></a>-->
+{% endif%}
+
 </span></td>
 </tr><tr>
 <td width="15%" valign="top" class="ui-widget-header">
@@ -220,26 +221,46 @@ _________________<br />
 <td colspan="2" class="ui-widget-header">{{LANG_POSTED}}: {{r.Original_Date|PostedDate(TimeFormat, TimeZone)}}
 <span class="postopt">
 &nbsp;
-<!-- START viewip -->
-{{LANG_IP}}&nbsp;{{URL_TAG("maintenance/viewip/", r.IP)|raw}}
-<!-- END viewip -->
 
-<!-- START iplogged -->
-{LANG-IPLOGGED}&nbsp;
-<!-- END iplogged -->
+{% if groupAccess == 1 or groupAccess == 2 %}
 
-<!-- START edit -->
-{{URL_TAG("boards/editpost/"~r.pid, IMG("application/views/simple2/images/edit.gif"))|raw}}
-<!-- END edit -->
+	{# see if poster is an admin and logged user is not. #}
+	{% if AUTHOR_GROUPLEVEL == 1 and groupAccess == 2 %}
+		{{LANG_IPLOGGED}}&nbsp;
+	{% else %}
 
-<!-- START delete -->
-<a href="#" onclick="confirmDlg('{LANG-DELPROMPT}', '{BOARDDIR}/delete.php?action=deletePost&bid={BID}&tid={TID}&pid={POSTID}');return false;"><img src="template/simple2/images/delete.gif" border="0" alt="" /></a>
-<!-- END delete -->
+		{# IP Visiblity#}
+		{% if GAC_SEEIP == TRUE %}
+			{{LANG_IP}}&nbsp;{{URL_TAG("maintenance/viewip/", r.IP)|raw}}
+		{% else %}
+			{{LANG_IPLOGGED}}&nbsp;
+		{% endif%}
 
-<!-- START quote -->
+		{% if GAC_EDITTOPIC == TRUE %}
+			{{URL_TAG("boards/editpost/"~r.pid, IMG("application/views/simple2/images/edit.gif"))|raw}}
+		{% endif%}
+
+		{% if GAC_DELETETOPIC == TRUE %}
+			<a href="#" onclick="confirmDlg('{LANG-DELPROMPT}', '{BOARDDIR}/delete.php?action=deletePost&bid={BID}&tid={TID}&pid={POSTID}');return false;"><img src="template/simple2/images/delete.gif" border="0" alt="" /></a>
+		{% endif%}
+
+	{% endif%}
+{% else %}
+
+	{% if LOGGEDUSER == r.author and GAC_EDITTOPIC == TRUE %}
+		{{URL_TAG("boards/editpost/"~r.pid, IMG("application/views/simple2/images/edit.gif"))|raw}}
+	{% endif %}
+
+	{% if LOGGEDUSER == r.author and GAC_DELETETOPIC == TRUE %}
+		<a href="#" onclick="confirmDlg('{LANG-DELPROMPT}', '{BOARDDIR}/delete.php?action=deletePost&bid={BID}&tid={TID}&pid={POSTID}');return false;"><img src="template/simple2/images/delete.gif" border="0" alt="" /></a>
+	{% endif %}
+
+{% endif%}
+
+{% if LOGGEDUSER != "guest" %}
 {{URL_TAG("boards/reply/"~TOPICID, IMG("application/views/simple2/images/quote.gif"))|raw}}
 <!--<a href="Post.php?mode=Reply&amp;bid={BID}&amp;tid={TID}&amp;pid={POSTID}&amp;type=2&amp;quser={AUTHOR}"><img src="template/simple2/images/quote.gif" border="0" alt="" /></a>-->
-<!-- END quote -->
+{% endif%}
 </span></td>
 </tr><tr>
 <td width="15%" class="ui-widget-header" valign="top">
@@ -321,5 +342,81 @@ _________________<br />
 </table><br />
 
 {% endfor %}
+
+{# setup quick reply #}
+{% if LOGGEDUSER != "guest" and CANPOST_REPLY == TRUE %}
+
+<script type="text/javascript" src="includes/js/jPanels.js"></script>
+<script type="text/javascript" src="includes/js/jquery.jUploader.js"></script>
+<script type="text/javascript" src="includes/js/jquery.spellchecker.js"></script>
+<!-- markItUp! -->
+<script type="text/javascript" src="includes/js/jquery.markitup.js"></script>
+<!-- markItUp! toolbar settings -->
+<script type="text/javascript" src="includes/js/set.js"></script>
+<!-- API detection -->
+<script type="text/javascript" src="includes/js/validateAPI.js"></script>
+<!-- Rich text editor file -->
+<script type="text/javascript" src="includes/js/pEditor.js"></script>
+<!-- call our collapsible panel -->
+<script type="text/javascript">
+$(function(){
+	$("#replybox").jPanels();
+});
+</script>
+
+<!-- warning container -->
+<div align="center" style="display:none;" id="div_ErrMsg">
+	<div class="ui-widget" style="width: 45%;">
+		<div class="ui-state-error ui-corner-all" style="padding: 0 .7em;text-align:left;">
+			<span style="float: right;font-weight:bold;"><a href="#close" onclick="$('#div_ErrMsg').hide('blind', {}, 500);" class="ui-icon ui-icon-circle-close">&nbsp;</a></span>
+			<p><span class="ui-icon ui-icon-alert" style="float: left; margin-right: .3em;"></span>
+			<strong>Alert:</strong>&nbsp;<span id="ErrMsg"></span></p>
+		</div>
+	</div>
+</div>
+<div id="moreSmiles"></div>
+<div id="DLG_upload">
+	<!--START upload -->
+	<form action="upload.php" method="post" enctype="multipart/form-data">
+		<input id="attach" name="attachment" type="file" /><br />
+		<input type="submit" value="{LANG-UPLOAD}" id="fileUpload" />
+		<input type="reset" value="{LANG-CLEAR}" id="ClearList" />
+		<input type="button" value="{LANG-VIEWFILES}" id="AttachList" />
+	</form>
+	<div id="filelist"></div>
+
+	<script type="text/javascript">
+
+		$(function(){
+			$('#attach').jUploader({LoadingGfx: "template/simple2/images/loading.gif",
+				LoadingMsg: lang.attachLoading, PendingMsg: lang.attachPending,
+				SuccessMsg: lang.attachSuccess, FailureMsg: lang.attachFailed,
+				uploadLimitMsg: lang.attachLimit, uploadLimit: "{ATTACHMENTLIMIT}"});
+		});
+	</script>
+	<!--END upload -->
+</div>
+
+<form method="post" action="Process.php?mode=reply&amp;bid={BID}&amp;tid={TID}&amp;pg={PAGE}">
+<div align="center">
+	<div id="emoticons" style="width:500px;" align="center">
+		{SMILES}
+	</div>
+	<textarea id="replyBody" name="reply_post" cols="80" rows="20"></textarea>
+	<br /><input type="submit" value="{LANG-REPLY}" class="submit" />
+
+	<div id="replybox" title="{LANG-OPTIONS}" style="width:400px;text-align:left;">
+		<div class="pContent">
+			<a href="#editor" class="toggle"><span>{LANG-DISABLERTF}</span></a> -  <a href="#smiles" onclick="$('#moreSmiles').dialog('open');">{LANG-SMILES}</a><br />
+			<input type="checkbox" name="subscribe" value="1" />{LANG-NOTIFY}<br />
+			<input type="checkbox" name="no_smile" value="1" />{LANG-DISABLESMILES}<br />
+			<input type="checkbox" name="no_bbcode" value="1" />{LANG-DISABLEBBCODE}<br />
+			<input type="hidden" name="page" value="{PAGE}" />
+		</div>
+	</div>
+</div>
+</form>
+
+{% endif %}
 
 {% endblock %}
