--- a/trunk/application/views/simple2/css/style.css
+++ b/trunk/application/views/simple2/css/style.css
@@ -223,6 +223,34 @@ LOADER CSS
 	z-index:1000;
 }
 
+#loadingBackGround_nojs {
+    position:fixed;
+    top:0px;
+    bottom:0px;
+    left:0px;
+    right:0px;
+    overflow:hidden;
+    padding:0;
+    margin:0;
+    background-color:#000;
+    filter:alpha(opacity=80);
+    opacity:0.8;
+    z-index:1000;
+}
+
+#loadingMessage_nojs {
+	position:fixed;
+	text-align: center;
+	top:35%;
+	left:33%;
+	padding:10px;
+	width:600px;
+	z-index:1001;
+	background-color:#A1B3C7;
+	color: #000;
+	border:solid 1px #000;
+}
+
 #loadingMessage {
 	position:fixed;
 	text-align: center;
