--- a/trunk/application/views/simple2/css/jui.css
+++ b/trunk/application/views/simple2/css/jui.css
@@ -1,11 +1,11 @@
-/*
- * jQuery UI CSS Framework 1.8.16
+/*!
+ * jQuery UI CSS Framework 1.8.20
  *
- * Copyright 2011, AUTHORS.txt (http:/jqueryui.com/about)
+ * Copyright 2012, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
- * http:/jquery.org/license
+ * http://jquery.org/license
  *
- * http:/docs.jquery.com/UI/Theming/API
+ * http://docs.jquery.com/UI/Theming/API
  */
 
 /* Layout helpers
@@ -13,12 +13,9 @@
 .ui-helper-hidden { display: none; }
 .ui-helper-hidden-accessible { position: absolute !important; clip: rect(1px 1px 1px 1px); clip: rect(1px,1px,1px,1px); }
 .ui-helper-reset { margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none; }
-.ui-helper-clearfix:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
-.ui-helper-clearfix { display: inline-block; }
-/* required comment for clearfix to work in Opera \*/
-* html .ui-helper-clearfix { height:1%; }
-.ui-helper-clearfix { display:block; }
-/* end clearfix */
+.ui-helper-clearfix:before, .ui-helper-clearfix:after { content: ""; display: table; }
+.ui-helper-clearfix:after { clear: both; }
+.ui-helper-clearfix { zoom: 1; }
 .ui-helper-zfix { width: 100%; height: 100%; top: 0; left: 0; position: absolute; opacity: 0; filter:Alpha(Opacity=0); }
 
 
@@ -30,7 +27,7 @@
 /* Icons
 ----------------------------------*/
 
-/* states and ../../simple2/images/ */
+/* states and images */
 .ui-icon { display: block; text-indent: -99999px; overflow: hidden; background-repeat: no-repeat; }
 
 
@@ -41,16 +38,16 @@
 .ui-widget-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
 
-/*
- * jQuery UI CSS Framework 1.8.16
+/*!
+ * jQuery UI CSS Framework 1.8.20
  *
- * Copyright 2011, AUTHORS.txt (http:/jqueryui.com/about)
+ * Copyright 2012, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
- * http:/jquery.org/license
+ * http://jquery.org/license
  *
- * http:/docs.jquery.com/UI/Theming/API
+ * http://docs.jquery.com/UI/Theming/API
  *
- * To view and modify this theme, visit http:/jqueryui.com/themeroller/?ctl=themeroller&ffDefault=Verdana,Arial,sans-serif&fwDefault=normal&fsDefault=1.2em&cornerRadius=4px&bgColorHeader=8494b4&bgTextureHeader=01_flat.png&bgImgOpacityHeader=75&borderColorHeader=8494b4&fcHeader=222222&iconColorHeader=222222&bgColorContent=c3c9d5&bgTextureContent=01_flat.png&bgImgOpacityContent=75&borderColorContent=aaaaaa&fcContent=222222&iconColorContent=222222&bgColorDefault=8494b4&bgTextureDefault=01_flat.png&bgImgOpacityDefault=75&borderColorDefault=d3d3d3&fcDefault=3c4049&iconColorDefault=3c4049&bgColorHover=3c4049&bgTextureHover=01_flat.png&bgImgOpacityHover=75&borderColorHover=8494b4&fcHover=8494b4&iconColorHover=8494b4&bgColorActive=3c4049&bgTextureActive=01_flat.png&bgImgOpacityActive=65&borderColorActive=8494b4&fcActive=8494b4&iconColorActive=8494b4&bgColorHighlight=fcf3c5&bgTextureHighlight=01_flat.png&bgImgOpacityHighlight=55&borderColorHighlight=fcefa1&fcHighlight=363636&iconColorHighlight=3d4a5c&bgColorError=f1b8b1&bgTextureError=01_flat.png&bgImgOpacityError=95&borderColorError=cd0a0a&fcError=cd0a0a&iconColorError=cd0a0a&bgColorOverlay=19191a&bgTextureOverlay=01_flat.png&bgImgOpacityOverlay=0&opacityOverlay=30&bgColorShadow=14161a&bgTextureShadow=01_flat.png&bgImgOpacityShadow=0&opacityShadow=30&thicknessShadow=8px&offsetTopShadow=-8px&offsetLeftShadow=-8px&cornerRadiusShadow=8px
+ * To view and modify this theme, visit http://jqueryui.com/themeroller/?ctl=themeroller&ctl=themeroller&ctl=themeroller&ffDefault=Verdana,Arial,sans-serif&fwDefault=normal&fsDefault=1.2em&cornerRadius=4px&bgColorHeader=8494b4&bgTextureHeader=01_flat.png&bgImgOpacityHeader=75&borderColorHeader=8494b4&fcHeader=222222&iconColorHeader=222222&bgColorContent=c3c9d5&bgTextureContent=01_flat.png&bgImgOpacityContent=75&borderColorContent=aaaaaa&fcContent=222222&iconColorContent=222222&bgColorDefault=8494b4&bgTextureDefault=01_flat.png&bgImgOpacityDefault=75&borderColorDefault=d3d3d3&fcDefault=3c4049&iconColorDefault=3c4049&bgColorHover=3c4049&bgTextureHover=01_flat.png&bgImgOpacityHover=75&borderColorHover=8494b4&fcHover=8494b4&iconColorHover=8494b4&bgColorActive=3c4049&bgTextureActive=01_flat.png&bgImgOpacityActive=65&borderColorActive=8494b4&fcActive=8494b4&iconColorActive=8494b4&bgColorHighlight=fcf3c5&bgTextureHighlight=01_flat.png&bgImgOpacityHighlight=55&borderColorHighlight=fcefa1&fcHighlight=363636&iconColorHighlight=3d4a5c&bgColorError=f1b8b1&bgTextureError=01_flat.png&bgImgOpacityError=95&borderColorError=cd0a0a&fcError=cd0a0a&iconColorError=cd0a0a&bgColorOverlay=19191a&bgTextureOverlay=01_flat.png&bgImgOpacityOverlay=0&opacityOverlay=30&bgColorShadow=14161a&bgTextureShadow=01_flat.png&bgImgOpacityShadow=0&opacityShadow=30&thicknessShadow=8px&offsetTopShadow=-8px&offsetLeftShadow=-8px&cornerRadiusShadow=8px
  */
 
 
@@ -68,9 +65,9 @@
 ----------------------------------*/
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { border: 1px solid #d3d3d3; background: #8494b4 url(../../../views/simple2/images/ui-bg_flat_75_8494b4_40x100.png) 50% 50% repeat-x; font-weight: normal; color: #3c4049; }
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #3c4049; text-decoration: none; }
-.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { border: 1px solid #8494b4; background: #3c4049 url(../../simple2/images/ui-bg_flat_75_3c4049_40x100.png) 50% 50% repeat-x; font-weight: normal; color: #8494b4; }
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { border: 1px solid #8494b4; background: #3c4049 url(../../../views/simple2/images/ui-bg_flat_75_3c4049_40x100.png) 50% 50% repeat-x; font-weight: normal; color: #8494b4; }
 .ui-state-hover a, .ui-state-hover a:hover { color: #8494b4; text-decoration: none; }
-.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid #8494b4; background: #3c4049 url(../../../views/simple2/images/ui-bg_flat_65_3c4049_40x100.png) 50% 50% repeat-x; font-weight: normal; color: #8494b4; }
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid #8494b4; background: #3c4049 url(../../../views/simple2/../../../views/simple2/images/ui-bg_flat_65_3c4049_40x100.png) 50% 50% repeat-x; font-weight: normal; color: #8494b4; }
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #8494b4; text-decoration: none; }
 .ui-widget :active { outline: none; }
 
@@ -88,7 +85,7 @@
 /* Icons
 ----------------------------------*/
 
-/* states and ../../simple2/images/ */
+/* states and images */
 .ui-icon { width: 16px; height: 16px; background-image: url(../../../views/simple2/images/ui-icons_222222_256x240.png); }
 .ui-widget-content .ui-icon {background-image: url(../../../views/simple2/images/ui-icons_222222_256x240.png); }
 .ui-widget-header .ui-icon {background-image: url(../../../views/simple2/images/ui-icons_222222_256x240.png); }
@@ -287,17 +284,17 @@
 
 /* Overlays */
 .ui-widget-overlay { background: #19191a url(../../../views/simple2/images/ui-bg_flat_0_19191a_40x100.png) 50% 50% repeat-x; opacity: .30;filter:Alpha(Opacity=30); }
-.ui-widget-shadow { margin: -8px 0 0 -8px; padding: 8px; background: #14161a url(../../../views/simple2/images/ui-bg_flat_0_14161a_40x100.png) 50% 50% repeat-x; opacity: .30;filter:Alpha(Opacity=30); -moz-border-radius: 8px; -khtml-border-radius: 8px; -webkit-border-radius: 8px; border-radius: 8px; }/*
- * jQuery UI Resizable 1.8.16
+.ui-widget-shadow { margin: -8px 0 0 -8px; padding: 8px; background: #14161a url(../../../views/simple2/images/ui-bg_flat_0_14161a_40x100.png) 50% 50% repeat-x; opacity: .30;filter:Alpha(Opacity=30); -moz-border-radius: 8px; -khtml-border-radius: 8px; -webkit-border-radius: 8px; border-radius: 8px; }/*!
+ * jQuery UI Resizable 1.8.20
  *
- * Copyright 2011, AUTHORS.txt (http:/jqueryui.com/about)
+ * Copyright 2012, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
- * http:/jquery.org/license
+ * http://jquery.org/license
  *
- * http:/docs.jquery.com/UI/Resizable#theming
+ * http://docs.jquery.com/UI/Resizable#theming
  */
 .ui-resizable { position: relative;}
-.ui-resizable-handle { position: absolute;font-size: 0.1px;z-index: 99999; display: block; }
+.ui-resizable-handle { position: absolute;font-size: 0.1px; display: block; }
 .ui-resizable-disabled .ui-resizable-handle, .ui-resizable-autohide .ui-resizable-handle { display: none; }
 .ui-resizable-n { cursor: n-resize; height: 7px; width: 100%; top: -5px; left: 0; }
 .ui-resizable-s { cursor: s-resize; height: 7px; width: 100%; bottom: -5px; left: 0; }
@@ -306,24 +303,24 @@
 .ui-resizable-se { cursor: se-resize; width: 12px; height: 12px; right: 1px; bottom: 1px; }
 .ui-resizable-sw { cursor: sw-resize; width: 9px; height: 9px; left: -5px; bottom: -5px; }
 .ui-resizable-nw { cursor: nw-resize; width: 9px; height: 9px; left: -5px; top: -5px; }
-.ui-resizable-ne { cursor: ne-resize; width: 9px; height: 9px; right: -5px; top: -5px;}/*
- * jQuery UI Selectable 1.8.16
+.ui-resizable-ne { cursor: ne-resize; width: 9px; height: 9px; right: -5px; top: -5px;}/*!
+ * jQuery UI Selectable 1.8.20
  *
- * Copyright 2011, AUTHORS.txt (http:/jqueryui.com/about)
+ * Copyright 2012, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
- * http:/jquery.org/license
+ * http://jquery.org/license
  *
- * http:/docs.jquery.com/UI/Selectable#theming
+ * http://docs.jquery.com/UI/Selectable#theming
  */
 .ui-selectable-helper { position: absolute; z-index: 100; border:1px dotted black; }
-/*
- * jQuery UI Accordion 1.8.16
+/*!
+ * jQuery UI Accordion 1.8.20
  *
- * Copyright 2011, AUTHORS.txt (http:/jqueryui.com/about)
+ * Copyright 2012, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
- * http:/jquery.org/license
+ * http://jquery.org/license
  *
- * http:/docs.jquery.com/UI/Accordion#theming
+ * http://docs.jquery.com/UI/Accordion#theming
  */
 /* IE/Win - Fix animation bug - #4615 */
 .ui-accordion { width: 100%; }
@@ -335,14 +332,14 @@
 .ui-accordion .ui-accordion-header .ui-icon { position: absolute; left: .5em; top: 50%; margin-top: -8px; }
 .ui-accordion .ui-accordion-content { padding: 1em 2.2em; border-top: 0; margin-top: -2px; position: relative; top: 1px; margin-bottom: 2px; overflow: auto; display: none; zoom: 1; }
 .ui-accordion .ui-accordion-content-active { display: block; }
-/*
- * jQuery UI Autocomplete 1.8.16
+/*!
+ * jQuery UI Autocomplete 1.8.20
  *
- * Copyright 2011, AUTHORS.txt (http:/jqueryui.com/about)
+ * Copyright 2012, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
- * http:/jquery.org/license
+ * http://jquery.org/license
  *
- * http:/docs.jquery.com/UI/Autocomplete#theming
+ * http://docs.jquery.com/UI/Autocomplete#theming
  */
 .ui-autocomplete { position: absolute; cursor: default; }	
 
@@ -350,13 +347,13 @@
 * html .ui-autocomplete { width:1px; } /* without this, the menu expands to 100% in IE6 */
 
 /*
- * jQuery UI Menu 1.8.16
+ * jQuery UI Menu 1.8.20
  *
- * Copyright 2010, AUTHORS.txt (http:/jqueryui.com/about)
+ * Copyright 2010, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
- * http:/jquery.org/license
+ * http://jquery.org/license
  *
- * http:/docs.jquery.com/UI/Menu#theming
+ * http://docs.jquery.com/UI/Menu#theming
  */
 .ui-menu {
 	list-style:none;
@@ -388,14 +385,14 @@
 	font-weight: normal;
 	margin: -1px;
 }
-/*
- * jQuery UI Button 1.8.16
+/*!
+ * jQuery UI Button 1.8.20
  *
- * Copyright 2011, AUTHORS.txt (http:/jqueryui.com/about)
+ * Copyright 2012, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
- * http:/jquery.org/license
+ * http://jquery.org/license
  *
- * http:/docs.jquery.com/UI/Button#theming
+ * http://docs.jquery.com/UI/Button#theming
  */
 .ui-button { display: inline-block; position: relative; padding: 0; margin-right: .1em; text-decoration: none !important; cursor: pointer; text-align: center; zoom: 1; overflow: visible; } /* the overflow property removes extra width in IE */
 .ui-button-icon-only { width: 2.2em; } /* to make room for the icon, a width needs to be set here */
@@ -426,14 +423,14 @@ input.ui-button { padding: .4em 1em; }
 
 /* workarounds */
 button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra padding in Firefox */
-/*
- * jQuery UI Dialog 1.8.16
+/*!
+ * jQuery UI Dialog 1.8.20
  *
- * Copyright 2011, AUTHORS.txt (http:/jqueryui.com/about)
+ * Copyright 2012, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
- * http:/jquery.org/license
+ * http://jquery.org/license
  *
- * http:/docs.jquery.com/UI/Dialog#theming
+ * http://docs.jquery.com/UI/Dialog#theming
  */
 .ui-dialog { position: absolute; padding: .2em; width: 300px; overflow: hidden; }
 .ui-dialog .ui-dialog-titlebar { padding: .4em 1em; position: relative;  }
@@ -447,14 +444,14 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 .ui-dialog .ui-dialog-buttonpane button { margin: .5em .4em .5em 0; cursor: pointer; }
 .ui-dialog .ui-resizable-se { width: 14px; height: 14px; right: 3px; bottom: 3px; }
 .ui-draggable .ui-dialog-titlebar { cursor: move; }
-/*
- * jQuery UI Slider 1.8.16
+/*!
+ * jQuery UI Slider 1.8.20
  *
- * Copyright 2011, AUTHORS.txt (http:/jqueryui.com/about)
+ * Copyright 2012, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
- * http:/jquery.org/license
+ * http://jquery.org/license
  *
- * http:/docs.jquery.com/UI/Slider#theming
+ * http://docs.jquery.com/UI/Slider#theming
  */
 .ui-slider { position: relative; text-align: left; }
 .ui-slider .ui-slider-handle { position: absolute; z-index: 2; width: 1.2em; height: 1.2em; cursor: default; }
@@ -470,14 +467,14 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 .ui-slider-vertical .ui-slider-handle { left: -.3em; margin-left: 0; margin-bottom: -.6em; }
 .ui-slider-vertical .ui-slider-range { left: 0; width: 100%; }
 .ui-slider-vertical .ui-slider-range-min { bottom: 0; }
-.ui-slider-vertical .ui-slider-range-max { top: 0; }/*
- * jQuery UI Tabs 1.8.16
+.ui-slider-vertical .ui-slider-range-max { top: 0; }/*!
+ * jQuery UI Tabs 1.8.20
  *
- * Copyright 2011, AUTHORS.txt (http:/jqueryui.com/about)
+ * Copyright 2012, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
- * http:/jquery.org/license
+ * http://jquery.org/license
  *
- * http:/docs.jquery.com/UI/Tabs#theming
+ * http://docs.jquery.com/UI/Tabs#theming
  */
 .ui-tabs { position: relative; padding: .2em; zoom: 1; } /* position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed") */
 .ui-tabs .ui-tabs-nav { margin: 0; padding: .2em .2em 0; }
@@ -488,14 +485,14 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 .ui-tabs .ui-tabs-nav li a, .ui-tabs.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a { cursor: pointer; } /* first selector in group seems obsolete, but required to overcome bug in Opera applying cursor: text overall if defined elsewhere... */
 .ui-tabs .ui-tabs-panel { display: block; border-width: 0; padding: 1em 1.4em; background: none; }
 .ui-tabs .ui-tabs-hide { display: none !important; }
-/*
- * jQuery UI Datepicker 1.8.16
+/*!
+ * jQuery UI Datepicker 1.8.20
  *
- * Copyright 2011, AUTHORS.txt (http:/jqueryui.com/about)
+ * Copyright 2012, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
- * http:/jquery.org/license
+ * http://jquery.org/license
  *
- * http:/docs.jquery.com/UI/Datepicker#theming
+ * http://docs.jquery.com/UI/Datepicker#theming
  */
 .ui-datepicker { width: 17em; padding: .2em .2em 0; display: none; }
 .ui-datepicker .ui-datepicker-header { position:relative; padding:.2em 0; }
@@ -555,14 +552,14 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
     left: -4px; /*must have*/
     width: 200px; /*must have*/
     height: 200px; /*must have*/
-}/*
- * jQuery UI Progressbar 1.8.16
+}/*!
+ * jQuery UI Progressbar 1.8.20
  *
- * Copyright 2011, AUTHORS.txt (http:/jqueryui.com/about)
+ * Copyright 2012, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
- * http:/jquery.org/license
+ * http://jquery.org/license
  *
- * http:/docs.jquery.com/UI/Progressbar#theming
+ * http://docs.jquery.com/UI/Progressbar#theming
  */
-.ui-progressbar { height:2em; text-align: left; }
+.ui-progressbar { height:2em; text-align: left; overflow: hidden; }
 .ui-progressbar .ui-progressbar-value {margin: -1px; height:100%; }
