- Added logic so user can activate their account, if activation is set to User. - Fixed a bug where ACtivation Key wsn't being applied in User Model.

--- a/trunk/application/views/simple2/lostpassword.twig
+++ b/trunk/application/views/simple2/lostpassword.twig
@@ -11,16 +11,11 @@
 <tr>
 <td colspan="2" class="ui-widget-header" align="center">::{{LANG_PWDRECOVER}}::</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{{LANG_USERNAME}}<br>[{{URL_TAG("login/register", LANG_REGISTER)|raw}}]</td>
+<td class="ui-widget-content" width="50%">{{LANG_USERNAME}} / {{LANG_EMAIL}}<br />[{{URL_TAG("login/register", LANG_REGISTER)|raw}}]</td>
 <td class="ui-widget-content" width="50%">
 	<input type="text" name="lost_user" class="text" size="30" id="usr" />
 	{{VALIDATION_USERNAME|raw}}
 </td>
-</tr><tr>
-<td class="ui-widget-content" width="50%">{{LANG_EMAIL}}</td>
-<td class="ui-widget-content" width="50%">
-	<input type="text" name="lost_email" class="text" size="30" id="email" />
-	{{VALIDATION_EMAIL|raw}}</td>
 </tr><tr>
 <td colspan="2" class="ui-widget-header" align="center"><input type="submit" value="{{LANG_GETPASS}}" class="submit" /></td>
 </tr>
