--- a/trunk/application/views/simple2/lostpassword.twig
+++ b/trunk/application/views/simple2/lostpassword.twig
@@ -6,6 +6,16 @@
 
 {{BREADCRUMB|raw}}<br />
 
+<!-- validation box. -->
+<div align="center" style="display:none;" id="div_ErrMsg">
+	<div class="ui-widget" style="width: 45%;">
+		<div class="ui-state-error ui-corner-all" style="padding: 0 .7em;text-align:left;">
+			<span style="float: right;font-weight:bold;"><a href="#close" onclick="$('#div_ErrMsg').hide('blind', {}, 500);" class="ui-icon ui-icon-circle-close">&nbsp;</a></span>
+			<p id="validateRes"></p>
+		</div>
+	</div>
+</div>
+
 {{PWDRECOVERFORM|raw}}
 <table border="0" class="table" cellspacing="1" cellpadding="1">
 <tr>
@@ -13,13 +23,31 @@
 </tr><tr>
 <td class="ui-widget-content" width="50%">{{LANG_USERNAME}} / {{LANG_EMAIL}}<br />[{{URL_TAG("login/register", LANG_REGISTER)|raw}}]</td>
 <td class="ui-widget-content" width="50%">
-	<input type="text" name="lost_user" class="text" size="30" id="usr" />
-	{{VALIDATION_USERNAME|raw}}
+	<input type="text" name="recover_info" class="text" size="30" id="recover_info" />
+	{{VALIDATION_USERNAME_EMAIL|raw}}
 </td>
 </tr><tr>
 <td colspan="2" class="ui-widget-header" align="center"><input type="submit" value="{{LANG_GETPASS}}" class="submit" /></td>
 </tr>
 </table>
 </form>
+
+<script type="text/javascript">
+new FormValidator('frmPasswordRecovery', [{
+    name: 'recover_info',
+    display: '{{LANG_USERNAME}} / {{LANG_EMAIL}}',
+    rules: 'required'
+}], function(errors, event) {
+
+    if (errors.length > 0) {
+        $('#validateRes').empty();
+        $('#validateRes').append(errors.join('<br />'));
+        $('#div_ErrMsg').show();
+    } else {
+        event.returnValue = true; //allow form to process.
+    }
+    
+});
+</script>
 
 {% endblock %}
